[package]
name = "async_user_lookup"
description = "A library to lookup user and groups on Unix/Linux. NOTE: This has been renamed to user_lookup to allow for both sync and async versions"
version = "0.1.2"
edition = "2021"
authors = ["Mattias Eriksson <mattias.eriksson@tutanota.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/snaggen/user_lookup"
homepage = "https://github.com/snaggen/user_lookup"
keywords = ["user", "group", "passwd"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["time", "fs"]}
[dev-dependencies]
tokio = { version = "1", features = ["time", "fs", "macros", "rt-multi-thread"]}

